
Note: over its 35+ year history, cdecl has never had good version numbering.
For changes in a particular version where the version number is unknown, the
version's author is given instead.  For the full (known) list of authors along
with their complete changes, see the AUTHORS file.

-------------------------------------------------------------------------------

* Changes in Cdecl 11.14

** `east-const` in K&R C
Now prints a warning that `east-const` isn't supported until C89.

** Fixed `void f(int())`
The long-standing issue <https://github.com/paul-j-lucas/cdecl/issues/10> has
finally been fixed.

** Fixed help message
The old mention of `files...` in the help messages was removed.


* Changes in Cdecl 11.13

** Aligned `enum`, `struct`, and `union` in C
Alignment of `enum`, `struct`, and `union` is now correctly forbidden in C.

** `alignas` & `_Alignas`
These keywords are now additionally allowed instead of `aligned [as|to]` in
pseudo-English.

** Auto-completion of cdecl keywords
Cdecl keywords are now _not_ auto-completable when explaining gibberish.

** Auto-completion tweaks
`new` is now auto-completable; `variadic` is now autocompletable only in C89
and later.  The following are now _not_ autocompletable: `co_await`,
`co_return`, `co_yield`, `concept`, `decltype`, and `requires`.

** `restrict` of `typedef`
`restrict` is now correctly allowed on `typedef`s of pointer:

    cdecl> typdef int *pint
    cdecl> explain restrict pint p
    declare p as restricted pint

** `return` English shorthand
`return` is now accepted as a shorthand for `returning` in pseudo-English.

** English new-style cast synonyms
The C++ keywords `const_cast`, `dynamic_cast`, `reinterpret_cast`, and
`static_cast` are now synonyms for their respective two-word counterparts in
pseudo-English.

** Fixed core dump for `--debug`/`-d` for operator
Fixed a core dump when using the `--debug`/`-d` option for an operator.

** Fixed function returning function parameter crash
A crash for:
